--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,14 @@
             <version>RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
+
+
         <!--腾讯AI开放平台SDK-->
         <dependency>
             <groupId>cn.xsshome</groupId>
