--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,12 @@
             <artifactId>taip</artifactId>
             <version>4.3.2</version>
         </dependency>
+        <!--百度云人工智能SDK-->
+        <dependency>
+            <groupId>com.baidu.aip</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.4.1</version>
+        </dependency>
 
     </dependencies>
 
