--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,22 @@
             <artifactId>java-sdk</artifactId>
             <version>4.4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sun/jai_codec -->
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>jai_codec</artifactId>
+            <version>1.1.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/libs/jai-codec-1.1.3.jar</systemPath>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sun/jai_core -->
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>jai_core</artifactId>
+            <version>1.1.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/libs/jai_core-1.1.3.jar</systemPath>
+        </dependency>
 
     </dependencies>
 
