--- a/pom.xml
+++ b/pom.xml
@@ -336,6 +336,14 @@
             <systemPath>${project.basedir}/src/main/libs/jai_core-1.1.3.jar</systemPath>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-core -->
+        <dependency>
+            <groupId>com.github.jai-imageio</groupId>
+            <artifactId>jai-imageio-core</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
