--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,7 @@
             <version>2.0.11</version>
         </dependency>
 
+
         <dependency>
             <!-- jsoup HTML parser library @ http://jsoup.org/ -->
             <groupId>org.jsoup</groupId>
@@ -347,7 +348,13 @@
             <version>1.3.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.opencv</groupId>
+            <artifactId>opencv-341</artifactId>
+            <version>3.4.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/libs/opencv-341.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
