1、调用腾讯或百度OCR时，对图片的格式进行限制 2、若图片大小过大，则压缩 3、若有多个附件，map中返回多附件的文件路径

--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,12 @@
             <version>2.6.12</version>
         </dependency>
 
+        <!--图片压缩工具-->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
 
         <!--腾讯AI开放平台SDK-->
         <dependency>
